
INCLUDE_DIRECTORIES(
.
../cerberus-src
../cerberus-src/core
)

SET(LOCAL_LIBRARIES "${LIB_NAME}")

#1.define target
SET(SERVICE_TEST service_test)

#2.group source
FILE(GLOB SERVICE_TEST_SOURCE service_test.h service_test.cpp)
SOURCE_GROUP("source" FILES ${SERVICE_TEST_SOURCE})

#4.create lib
ADD_LIBRARY(${SERVICE_TEST} SHARED ${SERVICE_TEST_SOURCE})
TARGET_LINK_LIBRARIES(${SERVICE_TEST} ${LOCAL_LIBRARIES})

IF(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    SET_TARGET_PROPERTIES(${SERVICE_TEST} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${PROJECT_PATH}/lib")
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    SET_TARGET_PROPERTIES(${SERVICE_TEST} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_PATH}/lib")
    SET_TARGET_PROPERTIES(${SERVICE_TEST} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_PATH}/lib")
ENDIF()
